--- a/schedules/isip69/schedule.html
+++ b/schedules/isip69/schedule.html
@@ -171,7 +171,7 @@
             </div>
         </div>
     </div>
-    <button class="back-button" onclick="goBack('../../main.html')">
+    <button class="back-button" onclick="goBack('../../index.html')">
         <span>Вернуться назад</span>
     </button>
     <div id="footer">
