--- a/teachers/teachers.html
+++ b/teachers/teachers.html
@@ -164,7 +164,7 @@
         </div>
     </div>
     <div class="back-button-container">
-        <button class="back-button" onclick="goBack('../../main.html')">
+        <button class="back-button" onclick="goBack('../../index.html')">
             <span>Вернуться назад</span>
         </button>
     </div>
