--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a id="teachers-link" href="teachers/teachers.html">
                 <p>Преподавательский состав</p>
             </a>
+            <a id="teachers-link" href="schedules/timeschedule.html">
+                <p>Расписание звонков</p>
+            </a>
         </div>
     </div>
 
