added more teachers

--- a/teachers/teachers.html
+++ b/teachers/teachers.html
@@ -161,6 +161,62 @@
                     <p class="teacher-subject"></p>
                 </div>
             </div>
+            <div class="teacher-cell">
+                <img class="teacher-img cover" src="../media/oduvan.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">Илья Варламов</p>
+                    <p class="teacher-subject">Урбанистика</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img cover" src="../media/linustechtips.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">всем привет</p>
+                    <p class="teacher-subject">я только что проснулся</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img cover" src="../media/waitingfordrugs.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">наркотики?</p>
+                    <p class="teacher-subject"><br>жду...</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img cover" src="../media/pasha.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">Павел Воля</p>
+                    <p class="teacher-subject"><br>нет блин лёха тюрьма</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img" src="../media/monky.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">monky</p>
+                    <p class="teacher-subject">f*** evolution let's go back to monky!!</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img cover" src="../media/heisenberg.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">Уолтер Уайт</p>
+                    <p class="teacher-subject">Химия</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img" src="../media/revva.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">Артур Пирожков</p>
+                    <p class="teacher-subject">нет блин булочкин</p>
+                </div>
+            </div>
+            <div class="teacher-cell">
+                <img class="teacher-img" src="../media/eminem.jpg">
+                <div class="teacher-info-container">
+                    <p class="teacher-name">Эминем</p>
+                    <p class="teacher-subject">чин чан чон чи</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="back-button-container">
