--- a/teachers/teachers.html
+++ b/teachers/teachers.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="teachers.css">
     
     <script src="../../index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>Расписание ИСиП-13</title>
 
@@ -211,10 +212,10 @@
                 </div>
             </div>
             <div class="teacher-cell">
-                <img class="teacher-img" src="../media/eminem.jpg">
+                <img class="teacher-img" src="../media/rick.jpg">
                 <div class="teacher-info-container">
-                    <p class="teacher-name">Эминем</p>
-                    <p class="teacher-subject">чин чан чон чи</p>
+                    <p class="teacher-name"><a href="../../schedules/prikol.html">Тут нет рикролла</a></p>
+                    <p class="teacher-subject">честно</p>
                 </div>
             </div>
         </div>
