--- a/schedules/isip69/schedule.html
+++ b/schedules/isip69/schedule.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../schedule.css">
     
     <script src="../../index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>Расписание ИСиП-69</title>
 </head>
