--- a/schedules/prikol.html
+++ b/schedules/prikol.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="prikol.css">
     
     <script src="../../index.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <title>B)</title>
 
@@ -21,7 +21,7 @@
     </div>
 
     <div class="content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <button class="back-button secret" onclick="doSecret()">
         <span>Вернуться назад</span>
