--- a/schedules/prikol.html
+++ b/schedules/prikol.html
@@ -24,7 +24,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <button class="back-button secret" onclick="doSecret()">
-        <span>Выхода нет</span>
+        <span>Вернуться назад</span>
     </button>
     <div id="footer">
         <p>(с) Чячеслав Верёмухин)</p>
