--- a/teachers/teachers.html
+++ b/teachers/teachers.html
@@ -8,7 +8,7 @@
     <script src="../../index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <title>Расписание ИСиП-13</title>
+    <title>Педагогический состав</title>
 
 </head>
 <body>
