--- a/teachers/teachers.html
+++ b/teachers/teachers.html
@@ -15,7 +15,7 @@
     <div class="header">
         <img src="../../media/logo.png" draggable="false">
         <div class="text">
-            <p>Преподавательский состав</p>
+            <p>Педагогический состав</p>
         </div>
     </div>
 
