--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ol>
             </div>
             <a id="teachers-link" href="teachers/teachers.html">
-                <p>Преподавательский состав</p>
+                <p>Педагогический состав</p>
             </a>
             <a id="teachers-link" href="schedules/timeschedule.html">
                 <p>Расписание звонков</p>
